Fix row stretch in VC

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,33 +88,33 @@ section {
   padding: 15px 25px ;
 
   &.slider {
-    padding: 0 ;
-    min-height: $slider-height ;
+	padding: 0 ;
+	min-height: $slider-height ;
   }
 
   &.punch-line {
 
-    text-align: center ;
+	text-align: center ;
 
-    h2 {
-      padding-bottom: 15px ;
-    }
+	h2 {
+	  padding-bottom: 15px ;
+	}
 
-    p {
-      font-size: $font-size-large ;
-      font-weight: 300;
-      margin-bottom: $spacer-vertical / 2 ;
-      &:last-child {
-        margin-bottom: $spacer-vertical ;
-      }
-    }
+	p {
+	  font-size: $font-size-large ;
+	  font-weight: 300;
+	  margin-bottom: $spacer-vertical / 2 ;
+	  &:last-child {
+		margin-bottom: $spacer-vertical ;
+	  }
+	}
   }
 
   &.partner {
-    margin-top: $spacer-vertical ;
-    border-top: 1px solid $gray-lighter ;
-    padding: $spacer-vertical 0 ;
-    text-align: center ;
+	margin-top: $spacer-vertical ;
+	border-top: 1px solid $gray-lighter ;
+	padding: $spacer-vertical 0 ;
+	text-align: center ;
   }
 
 }
@@ -129,8 +129,8 @@ footer {
   font-size: 80% ;
 
   .footer-text {
-    vertical-align: middle;
-    margin-top: $footer-margin-top-fix ;
+	vertical-align: middle;
+	margin-top: $footer-margin-top-fix ;
   }
 
 }
@@ -139,13 +139,13 @@ footer {
 ## Pages
 --------------------------------------------------------------*/
 
-article.page,
-article.post,
- {
+/* When not using VC !!! concerns the "stretch row and content" */
+/*article.page,
+article.post {
 	max-width: $container-md ;
-  margin: 0 auto ;
-  padding: $spacer-vertical $padding-base-horizontal ;
-}
+  	margin: 0 auto ;
+  	padding: $spacer-vertical $padding-base-horizontal ;
+}*/
 
 
 /*--------------------------------------------------------------
@@ -157,28 +157,27 @@ article.post,
 
 .vc_row {
   &.wpb_row , .wpb_wrapper {
-  	max-width: $container-md ;
-  	margin-left: auto ;
-  	margin-right: auto ;
+	max-width: $container-md ;
+	margin-left: auto ;
+	margin-right: auto ;
   }
   &.full-width-background {
-    max-width: 100% ;
+	max-width: 100% ;
   }
-
 }
 
 .vc_row[data-vc-full-width]{
-  max-width: 100% ;
+	max-width: 100% ;
 }
 
 .vc_row[data-vc-stretch-content]{
   .wpb_wrapper {
-    max-width: 100% ;
+	max-width: 100% ;
   }
 }
 
 .wpb_single_image .vc_figure {
-    display: block; /* inline-block*/
+	display: block; /* inline-block*/
 }
 
 .media-grid-caption {
@@ -400,26 +399,26 @@ object {
 .color-palette {
 
   .patch {
-    display: inline-block;
-    min-width: 160px ;
-    padding-top: 32px ;
-    border-radius: 6px ;
-    background-color: #2D2D2D ;
-    margin-right: 12px ;
+	display: inline-block;
+	min-width: 160px ;
+	padding-top: 32px ;
+	border-radius: 6px ;
+	background-color: #2D2D2D ;
+	margin-right: 12px ;
 
-    @each $name, $color in $palette {
-      &.#{$name} { background-color: $color ; }
-    }
+	@each $name, $color in $palette {
+	  &.#{$name} { background-color: $color ; }
+	}
 
-    code {
-      display: block;
-      white-space: nowrap;
-      vertical-align: bottom;
-      background-color: $gray-lighter ;
-      color: map-get( $palette, "color-dark-gray" );
-        padding: 5px 8px ;
-      border-radius: 0 0 4px 4px ;
-    }
+	code {
+	  display: block;
+	  white-space: nowrap;
+	  vertical-align: bottom;
+	  background-color: $gray-lighter ;
+	  color: map-get( $palette, "color-dark-gray" );
+		padding: 5px 8px ;
+	  border-radius: 0 0 4px 4px ;
+	}
 
   }
 }
